Some camera design changes with using geomodel (#2677)
* Do not show double gap for when no zoom button to show

* Add location-off icon

* Basic location button for camera

* Do not show new button in default mode

* In advanced mode using geomodel is opt-in with the button state

* Basic info box layout

* Add opacity

* Update strings.ftl

* Use location if present

* If no location permission given, show permission gate on pressing use location

* Minor restyle for offline text

* Refactor LocationStatus and add animation

* Update snapshot tests

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -214,6 +214,7 @@
   "Device-storage-full": "Device storage full",
   "Device-storage-full-description": "iNaturalist may not be able to save your photos or may crash.",
   "Disable-flash": "Disable flash",
+  "Disable-location": "Disable location",
   "Disagreement": "*@{ $username } disagrees this is <0/>",
   "DISCARD": "DISCARD",
   "DISCARD-ALL": "DISCARD ALL",
@@ -244,6 +245,7 @@
   "EMAIL": "EMAIL",
   "EMAIL-DEBUG-LOGS": "EMAIL DEBUG LOGS",
   "Enable-flash": "Enable flash",
+  "Enable-location": "Enable location",
   "Enable-notifications": "Enable notifications",
   "Endemic": "Endemic",
   "Endemic-to-place": "Endemic to { $place }",
@@ -291,7 +293,7 @@
   "Flag-Item-Other-Description": "Some other reason you can explain below.",
   "Flag-Item-Other-Input-Hint": "Specify the reason you're flagging this item",
   "Flagged": "Flagged",
-  "Flash": "flash",
+  "Flash": "Flash",
   "Flip-camera": "Flip camera",
   "FOLLOW": "FOLLOW",
   "FOLLOWING--notifications": "FOLLOWING",
@@ -332,6 +334,7 @@
   "If-youre-seeing-this-error": "If you're seeing this and you're online, iNat staff have already been notified. Thanks for finding a bug! If you're offline, please take a screenshot and send us an email when you're back on the Internet.",
   "IGNORE-LOCATION": "IGNORE LOCATION",
   "Ignore-notifications": "Ignore notifications",
+  "Ignoring-location": "Ignoring location",
   "Import-Photos-From": "Import Photos From",
   "IMPORT-X-OBSERVATIONS": "IMPORT { $count ->\n  [one] 1 OBSERVATION\n *[other] { $count } OBSERVATIONS\n}",
   "IMPROVE-THESE-SUGGESTIONS-BY-USING-YOUR-LOCATION": "IMPROVE THESE SUGGESTIONS BY USING YOUR LOCATION",
@@ -518,7 +521,7 @@
   "Offensive-Inappropriate": "Offensive/Inappropriate",
   "Offensive-Inappropriate-Examples": "Misleading or illegal content, racial or ethnic slurs, etc. For more on our definition of \"appropriate,\" see the FAQ.",
   "Offline-DQA-description": "The DQA may not be accurate. Check your internet connection and try again.",
-  "Offline-suggestions-do-not-use-your-location": "Offline suggestions do not use your location and may differ from online suggestions. Taxon images and common names may not load.",
+  "Offline-suggestions-may-differ-from-online": "Offline suggestions may differ from online suggestions, and taxon images and common names may not load.",
   "OK": "OK",
   "Oldest-to-newest": "Oldest to newest",
   "Once-you-create-and-upload-observations": "Once you create & upload observations, other members of our community can add identifications to help your observations reach research grade.",
@@ -847,6 +850,7 @@
   "User": "User { $userHandle }",
   "USERNAME-OR-EMAIL": "USERNAME OR EMAIL",
   "Users": "Users",
+  "Using-location": "Using location",
   "Version-app-build": "Version { $appVersion } ({ $buildVersion })",
   "VIEW-ALL-X-PLACES": "VIEW ALL { $count } PLACES",
   "VIEW-ALL-X-PROJECTS": "VIEW ALL { $count } PROJECTS",
