--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -305,6 +305,7 @@
   "Get-identifications-from-real-people": "Get identifications from real people.",
   "Get-more-accurate-suggestions-create-useful-data": "Get more accurate suggestions & create useful data for science using your location",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
+  "Getting-an-even-more-accurate-ID": "Getting an even more accurate ID",
   "Go-back": "Go back",
   "Google-Play-Services-Not-Installed": "Google Play Services Not Installed",
   "GRANT-PERMISSION": "GRANT PERMISSION",
@@ -745,6 +746,7 @@
   "Sign-in-with-Apple-Failed": "Sign in with Apple Failed",
   "Sign-in-with-Google": "Sign in with Google",
   "Sign-in-with-Google-Failed": "Sign in with Google Failed",
+  "Skip": "Skip",
   "Skip-for-now": "Skip for now",
   "Something-went-wrong": "Something went wrong.",
   "Sorry-this-observation-was-deleted": "Sorry, this observation was deleted",
@@ -809,6 +811,7 @@
   "This-is-a-wild-organism": "This is a wild organism and wasn't placed in this location by humans.",
   "This-is-how-taxon-names-will-be-displayed": "This is how all taxon names will be displayed to you across iNaturalist:",
   "This-is-your-identification-other-people-may-help-confirm-it": "This is your identification. Other people may help confirm it!",
+  "This-may-take-a-few-seconds": "This may take a few seconds",
   "This-observation-has-no-comments-or-identifications-yet": "This observation has no comments or identifications yet.",
   "This-observation-has-not-met-the-conditions-required-to-meet-Research-Grade": "This observation has not met the conditions required to meet Research Grade status",
   "This-observation-is-not-eligible-for-research-grade-status": "This observation is not eligible for research grade status. Learn more in the Data Quality Assessment below.",
