Fix MOB-438 - if user is unconfirmed, show dialog when trying to interact with an observation / other user

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -244,6 +244,7 @@
   "EDUCATORS": "EDUCATORS",
   "EMAIL": "EMAIL",
   "EMAIL-DEBUG-LOGS": "EMAIL DEBUG LOGS",
+  "EMAIL-SENT": "EMAIL SENT!",
   "Enable-flash": "Enable flash",
   "Enable-location": "Enable location",
   "Enable-notifications": "Enable notifications",
@@ -339,6 +340,7 @@
   "IMPORT-X-OBSERVATIONS": "IMPORT { $count ->\n  [one] 1 OBSERVATION\n *[other] { $count } OBSERVATIONS\n}",
   "IMPROVE-THESE-SUGGESTIONS-BY-USING-YOUR-LOCATION": "IMPROVE THESE SUGGESTIONS BY USING YOUR LOCATION",
   "improving--identification": "Improving",
+  "In-order-to-add-comments-or-IDs": "In order to add comments or IDs on other people’s content, please confirm your email. Please click the link sent to <b>{ $email }</b> to confirm your email address.",
   "iNat-is-global-community": "iNaturalist is a global community of naturalists creating open data for science by collectively observing & identifying organisms",
   "INATURALIST-ACCOUNT-SETTINGS": "INATURALIST ACCOUNT SETTINGS",
   "iNaturalist-AI-Camera": "iNaturalist AI Camera",
@@ -552,6 +554,7 @@
   "Please-allow-Location-Access": "Please allow Location Access",
   "Please-allow-Microphone-Access": "Please allow Microphone Access",
   "Please-choose-a-different-password": "Please choose a different password.",
+  "PLEASE-CONFIRM-EMAIL": "PLEASE CONFIRM EMAIL",
   "Please-Grant-Permission": "Please Grant Permission",
   "PLEASE-LOG-IN": "PLEASE LOG IN",
   "Please-make-sure-your-password-is-at-least-6-characters": "Please make sure your password is at least 6 characters.",
@@ -674,6 +677,7 @@
   "Removes-your-vote-of-disagreement": "Removes your vote of disagreement",
   "Research-Grade--quality-grade": "Research Grade",
   "Research-Grade-Status": "Research Grade Status",
+  "RESEND-CONFIRMATION-EMAIL": "RESEND CONFIRMATION EMAIL",
   "RESET-PASSWORD": "RESET PASSWORD",
   "RESET-RECORDING": "RESET RECORDING",
   "RESET-SEARCH": "RESET SEARCH",
