--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -936,13 +936,19 @@
   "You-havent-joined-any-projects-yet": "You haven’t joined any projects yet!",
   "You-havent-observed-any-species-yet": "You haven't observed any species yet.",
   "You-likely-observed-a-new-species": "You likely observed a new species!",
+  "You-likely-observed-a-species": "You likely observed a species",
+  "You-likely-observed-an-organism-in-this-group": "You likely observed an organism in this group",
   "You-make-an-observation-every-time-you": "You make an observation every time you take a picture of an organism with a date and location.",
   "You-may-have-observed-a-new-species": "You may have observed a new species!",
+  "You-may-have-observed-a-species": "You may have observed a species",
+  "You-may-have-observed-an-organism-in-this-group": "You may have observed an organism in this group",
   "You-must-be-logged-in-to-view-messages": "You must be logged in to view messages",
   "You-must-install-Google-Play-Services-to-sign-in-with-Google": "You must install Google Play Services to sign in with Google.",
   "You-need-an-Internet-connection-to-do-that": "You need an Internet connection to do that.",
   "You-need-log-in-to-do-that": "You need to log in to do that.",
   "You-observed-a-new-species": "You observed a new species!",
+  "You-observed-a-species": "You observed a species",
+  "You-observed-an-organism-in-this-group": "You observed an organism in this group",
   "You-will-see-notifications": "You’ll see notifications here once you log in & upload observations.",
   "Your-donation-to-iNaturalist": "Your donation to iNaturalist supports the improvement and stability of the mobile apps and website that connects millions of people to nature and enables the protection of biodiversity worldwide!",
   "Your-email-is-confirmed": "Your email is confirmed! Please log in to continue.",
