Alternative return for match screen in absence of suggestion

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -227,6 +227,7 @@
   "DISCARD-SOUND--question": "DISCARD SOUND?",
   "DISCARD-X-OBSERVATIONS": "{ $count ->\n  [one] DISCARD OBSERVATION\n *[other] DISCARD { $count } OBSERVATIONS\n}",
   "DISMISS": "DISMISS",
+  "Do-you-know-what-group-this-is-in": "Do you know what group this is in?",
   "DONATE": "DONATE",
   "DONATE-TO-INATURALIST": "DONATE TO INATURALIST",
   "DONE": "DONE",
