Restore incorrectly modified string

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -29,7 +29,7 @@
   "Add-optional-notes": "Add optional notes",
   "Adds-your-vote-of-agreement": "Adds your vote of agreement",
   "Adds-your-vote-of-disagreement": "Adds your vote of disagreement",
-  "Advanced--interface-mode-with-explainer": "Show Advanced Settings (Upload multiple photos and sounds)",
+  "Advanced--interface-mode-with-explainer": "Advanced (Upload multiple photos and sounds)",
   "Affiliation": "Affiliation: { $site }",
   "After-capturing-or-importing-photos-show": "After capturing or importing photos, show:",
   "Agree": "Agree",
