Different header for additional suggestions section

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -377,6 +377,7 @@
   "It-can-now-be-shared-for-use-in-research": "It can now be shared for use in research",
   "It-may-take-up-to-an-hour-to-remove-content": "It may take up to an hour to completely delete all associated content",
   "It-might-also-be": "It might also be",
+  "It-might-be-one-of-these": "It might be one of these",
   "January": "January",
   "JOIN": "JOIN",
   "JOIN-PROJECT": "JOIN PROJECT",
