--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -377,6 +377,7 @@
   "It-can-now-be-shared-for-use-in-research": "It can now be shared for use in research",
   "It-may-take-up-to-an-hour-to-remove-content": "It may take up to an hour to completely delete all associated content",
   "It-might-also-be": "It might also be",
+  "It-might-be-one-of-these": "It might be one of these",
   "January": "January",
   "JOIN": "JOIN",
   "JOIN-PROJECT": "JOIN PROJECT",
@@ -867,6 +868,7 @@
   "Watch-your-notifications-for-identifications": "Watch your notifications for identifications!",
   "We-are-not-confident-enough-to-make-a-top-ID-suggestion": "We’re not confident enough to make a top ID suggestion, but here are some other suggestions:",
   "Welcome-back": "Welcome back!",
+  "Were-not-confident-enough-to-make-an-ID": "We’re not confident enough to make an ID.",
   "Weve-made-some-updates": "We've made some updates, so we recommend taking a look at your settings. You can always update these later.",
   "WHAT-IS-INATURALIST": "WHAT IS INATURALIST?",
   "Whats-more-by-recording": "What's more, by recording and sharing your observations, you'll create research-quality data for scientists working to better understand and protect nature. So if you like recording your findings from the outdoors, or if you just like learning about life, join us!",
