--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -432,6 +432,7 @@
   "MONTHS": "MONTHS",
   "More": "More",
   "More-info": "More info",
+  "More-ways-to-observe": "More ways to observe",
   "MOST-FAVED": "MOST FAVED",
   "Most-faved": "Most faved",
   "MY-CONTENT--notifications": "MY CONTENT",
