--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -654,7 +654,7 @@
   "RECORD-SOUND": "RECORD SOUND",
   "Record-verb": "Record",
   "Recording-sound": "Recording sound",
-  "Recording-stopped-Tap-play-the-current-recording": "Recording stopped. Tap play the current recording.",
+  "Recording-stopped-Tap-to-play-the-current-recording": "Recording stopped. Tap to play the current recording.",
   "REDO-SEARCH-IN-MAP-AREA": "REDO SEARCH IN MAP AREA",
   "Remove-agreement": "Remove agreement",
   "Remove-disagreement": "Remove disagreement",
