--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -669,6 +669,7 @@
   "Removes-your-vote-of-agreement": "Removes your vote of agreement",
   "Removes-your-vote-of-disagreement": "Removes your vote of disagreement",
   "Research-Grade--quality-grade": "Research Grade",
+  "RESEARCH-GRADE--quality-grade": "RESEARCH GRADE",
   "Research-Grade-Status": "Research Grade Status",
   "RESET-PASSWORD": "RESET PASSWORD",
   "RESET-RECORDING": "RESET RECORDING",
