Text updates and AICamera icon update for onboarding carousel

--- a/src/i18n/l10n/en.ftl.json
+++ b/src/i18n/l10n/en.ftl.json
@@ -122,20 +122,17 @@
   "COMMENT": "COMMENT",
   "Comment-options": "Comment options",
   "Common-Name-Scientific-Name": "Common Name (Scientific Name)",
-  "Community-based": "Community-based",
   "Community-Discussion": "Community Discussion",
   "Community-Guidelines": "Community Guidelines",
   "COMMUNITY-GUIDELINES": "COMMUNITY GUIDELINES",
   "Confidence--label": "Confidence",
   "CONFIRM": "CONFIRM",
   "Congrats-on-making-your-first-observation": "Congrats on making your first observation!",
-  "CONNECT-TO-NATURE": "CONNECT TO NATURE",
-  "Connect-to-Nature": "Connect to Nature",
+  "Connect-with-expert-naturalists": "Connect with expert naturalists",
   "Connect-with-other-naturalists": "Connect with other naturalists and engage in conversations.",
   "Connection-problem-Please-try-again-later": "Connection problem. Please try again later.",
   "CONTACT-SUPPORT": "CONTACT SUPPORT",
   "CONTINUE": "CONTINUE",
-  "Contribute-to-Science": "Contribute to Science",
   "Coordinates-copied-to-clipboard": "Coordinates copied to clipboard",
   "Copy-coordinates": "Copy Coordinates",
   "Copyright": "Copyright",
@@ -225,6 +222,7 @@
   "DISCARD-RECORDING": "DISCARD RECORDING",
   "DISCARD-SOUND--question": "DISCARD SOUND?",
   "DISCARD-X-OBSERVATIONS": "{ $count ->\n  [one] DISCARD OBSERVATION\n *[other] DISCARD { $count } OBSERVATIONS\n}",
+  "DISCOVER-NATURE-AROUND-YOU": "DISCOVER NATURE AROUND YOU",
   "DISMISS": "DISMISS",
   "Do-you-know-what-group-this-is-in": "Do you know what group this is in?",
   "DONATE": "DONATE",
@@ -264,6 +262,7 @@
   "EXACT-DATE": "EXACT DATE",
   "except": "except",
   "EXPAND-MAP": "EXPAND MAP",
+  "Experts-help-verify-and-improve-IDs": "Experts help verify and improve IDs",
   "Explore": "Explore",
   "EXPLORE": "EXPLORE",
   "Explore-Filters": "Explore Filters",
@@ -301,6 +300,7 @@
   "Forgot-Password": "Forgot Password",
   "GEOPRIVACY": "GEOPRIVACY",
   "Geoprivacy-status": "Geoprivacy: { $status }",
+  "Get-an-instant-ID-of-any-plant-animal-fungus": "Get an instant ID of any plant, animal, or fungus",
   "Get-identifications-from-real-people": "Get identifications from real people.",
   "Get-more-accurate-suggestions-create-useful-data": "Get more accurate suggestions & create useful data for science using your location",
   "Get-your-identification-verified-by-real-people": "Get your identification verified by real people in the iNaturalist community",
@@ -313,6 +313,7 @@
   "Group-photos-onboarding": "Group photos into observations– make sure there is only one species per observation",
   "Grow-your-collection": "Grow your collection",
   "HELP": "HELP",
+  "Help-protect-species": "Help protect species",
   "Hide": "Hide",
   "Highest": "Highest",
   "HIGHEST-RANK": "HIGHEST RANK",
@@ -327,7 +328,7 @@
   "Identifiers": "Identifiers",
   "Identifiers-View": "Identifiers View",
   "Identify-an-organism": "Identify an organism",
-  "Identify-record-learn": "Identify, record, and learn about every living species on earth using iNaturalist",
+  "Identify-species-anywhere": "Identify species anywhere",
   "If-an-account-with-that-email-exists": "If an account with that email exists, we've sent password reset instructions to your email.",
   "If-you-have-an-existing-account-try-sign-in-reset": "If you have an existing iNat account, try signing in with your username and password, or try resetting your password using the email address associated with your account.",
   "If-you-leave-x-of-your-observations-removed": "If you leave this traditional project, { $count ->\n  [one] 1 of your observations\n *[other] { $count } of your observations\n} will also be removed from this project.",
@@ -341,7 +342,6 @@
   "IMPORT-X-OBSERVATIONS": "IMPORT { $count ->\n  [one] 1 OBSERVATION\n *[other] { $count } OBSERVATIONS\n}",
   "IMPROVE-THESE-SUGGESTIONS-BY-USING-YOUR-LOCATION": "IMPROVE THESE SUGGESTIONS BY USING YOUR LOCATION",
   "improving--identification": "Improving",
-  "iNat-is-global-community": "iNaturalist is a global community of naturalists creating open data for science by collectively observing & identifying organisms",
   "INATURALIST-ACCOUNT-SETTINGS": "INATURALIST ACCOUNT SETTINGS",
   "iNaturalist-AI-Camera": "iNaturalist AI Camera",
   "iNaturalist-can-save-photos-you-take-in-the-app-to-your-devices-photo-library": "iNaturalist can save photos you take in the app to your device’s photo library.",
@@ -504,7 +504,6 @@
   "Observation-with-no-evidence": "Observation with no evidence",
   "Observations": "Observations",
   "Observations-need-location-date--warning": "iNaturalist observations need a location and date to be useful to scientists. Please check observations with this icon before uploading.",
-  "Observations-on-iNat-are-cited": "Observations on iNaturalist are cited in scientific papers, have led to rediscoveries, and help scientists understand life on our planet",
   "Observations-View": "Observations View",
   "OBSERVATIONS-WITHOUT-NUMBER": "{ $count ->\n  [one] OBSERVATION\n *[other] OBSERVATIONS\n}",
   "Observe-and-identify-organisms-in-real-time-with-your-camera": "Observe and identify organisms in real time with your camera",
@@ -848,6 +847,7 @@
   "USERNAME-OR-EMAIL": "USERNAME OR EMAIL",
   "Users": "Users",
   "Using-location": "Using location",
+  "Verified-IDs-are-used-for-science-and-conservation": "Verified IDs are used for science and conservation",
   "Version-app-build": "Version { $appVersion } ({ $buildVersion })",
   "VIEW-ALL-X-PLACES": "VIEW ALL { $count } PLACES",
   "VIEW-ALL-X-PROJECTS": "VIEW ALL { $count } PROJECTS",
